# 02-simple-redis

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  cliff.toml
examples/: example1.rs  example10.rs  example12.rs  example13.rs  example14.rs  example2.rs  example3.rs  example4.rs  example5.rs  example6.rs  example7.rs  example8.rs  example9.rs
src/: lib.rs  main.rs
src/backend/: mod.rs
src/cmd/: hmap.rs  map.rs  mod.rs
src/resp/: decode.rs  encode.rs  mod.rs
