[package]
name = "simple-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[example]]
name = "example1"
path = "examples/example1.rs"

[[example]]
name = "example2"
path = "examples/example2.rs"

[[example]]
name = "example3"
path = "examples/example3.rs"

[[example]]
name = "example4"
path = "examples/example4.rs"

[[example]]
name = "example5"
path = "examples/example5.rs"

[[example]]
name = "example6"
path = "examples/example6.rs"

[[example]]
name = "example7"
path = "examples/example7.rs"

[[example]]
name = "example8"
path = "examples/example8.rs"

[[example]]
name = "example9"
path = "examples/example9.rs"

[[example]]
name = "example10"
path = "examples/example10.rs"

[[example]]
name = "example12"
path = "examples/example12.rs"

[[example]]
name = "example13"
path = "examples/example13.rs"

[[example]]
name = "example14"
path = "examples/example14.rs"


[dependencies]
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.90"
enum_dispatch = "0.3.13"
derive_more = { version = "1", features = [
    "deref",
    "from",
    "into",
    "constructor",
    "as_ref",
] }
rand = "0.8.5"
cargo-watch = "8.5.3"
bytes = "1.8.0"
thiserror = "1.0.64"
tokio-stream = "0.1"
tracing = "0.1.40"
tracing-subscriber = "0.3"
dashmap = "6.1.0"
lazy_static = "1.4.0"
